--- a/www.nass.gov.ng/84a8528a127fcc0d66cbce14d619f23868282e71.yml
+++ b/www.nass.gov.ng/84a8528a127fcc0d66cbce14d619f23868282e71.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 01:30:51 GMT
+    - Sat, 11 Aug 2018 14:37:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=waoPBfnkolIWB6xz%2C5rNm0; path=/
+    - PHPSESSID=bEv1BP5PgwAL6DM8xTVuq3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 01:30:52 GMT
+recorded_at: Sat, 11 Aug 2018 14:37:02 GMT
