--- a/www.nass.gov.ng/e4dd0306b3ea756a0c99f4733aa482bb27545683.yml
+++ b/www.nass.gov.ng/e4dd0306b3ea756a0c99f4733aa482bb27545683.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 01:35:26 GMT
+    - Sat, 11 Aug 2018 14:41:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fHYC47kS9M8%2CS3rKUuiQ50; path=/
+    - PHPSESSID=bWBYwF1JCS-UlGCjZKrKS3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 01:35:27 GMT
+recorded_at: Sat, 11 Aug 2018 14:41:13 GMT
