--- a/www.nass.gov.ng/7c32cf58b00fa7de3d34aeb9b8257aca197e8595.yml
+++ b/www.nass.gov.ng/7c32cf58b00fa7de3d34aeb9b8257aca197e8595.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 01:49:42 GMT
+    - Sat, 11 Aug 2018 14:55:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=r61lw0IYcZFyNrl1gYZ%2CT2; path=/
+    - PHPSESSID=G2C3L14HZsKuCHE4MmRAf1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 01:49:42 GMT
+recorded_at: Sat, 11 Aug 2018 14:55:45 GMT
