--- a/www.nass.gov.ng/e9e88d9651a0d4963003566bf5e3e49420702d72.yml
+++ b/www.nass.gov.ng/e9e88d9651a0d4963003566bf5e3e49420702d72.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 02:06:32 GMT
+    - Sat, 11 Aug 2018 15:14:12 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VMlwqGLQdCJ8t1%2ClXJtxR0; path=/
+    - PHPSESSID=HQniWkEFACuf6k5glFh763; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 02:06:32 GMT
+recorded_at: Sat, 11 Aug 2018 15:14:12 GMT
