--- a/www.nass.gov.ng/619ea08077f40cf9bfb76066062eb294dd3a98b8.yml
+++ b/www.nass.gov.ng/619ea08077f40cf9bfb76066062eb294dd3a98b8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 02:08:45 GMT
+    - Sat, 11 Aug 2018 15:16:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CeIMeJMbcU%2C4TKFHhIkY23; path=/
+    - PHPSESSID=MuZ0WZDNjpyQu3snjDtH70; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 02:08:45 GMT
+recorded_at: Sat, 11 Aug 2018 15:16:22 GMT
