--- a/www.nass.gov.ng/640f5adc93a7527e2e8442f2f1134d63591250b7.yml
+++ b/www.nass.gov.ng/640f5adc93a7527e2e8442f2f1134d63591250b7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 02:11:24 GMT
+    - Sat, 11 Aug 2018 15:19:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zny3H7p5ySPvzyFv%2C968h1; path=/
+    - PHPSESSID=KaIgztjJBoGxPiB4HKS7s1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 02:11:24 GMT
+recorded_at: Sat, 11 Aug 2018 15:19:07 GMT
