--- a/www.nass.gov.ng/cdd1b60ad38288ff55c244ffe5b0b2f080b3e9eb.yml
+++ b/www.nass.gov.ng/cdd1b60ad38288ff55c244ffe5b0b2f080b3e9eb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 02:31:40 GMT
+    - Sat, 11 Aug 2018 15:39:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FDBmXapp7nBcYEXNrqyqW2; path=/
+    - PHPSESSID=JeNpIEVholtsOie%2CQ8XeT3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 02:31:40 GMT
+recorded_at: Sat, 11 Aug 2018 15:39:05 GMT
