--- a/www.nass.gov.ng/74d2b162bdaf3e0d3bb34230c493c4cd2e92a87b.yml
+++ b/www.nass.gov.ng/74d2b162bdaf3e0d3bb34230c493c4cd2e92a87b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 02:36:20 GMT
+    - Sat, 11 Aug 2018 15:42:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ugHJNCVM%2CyvWVNbvaPeM32; path=/
+    - PHPSESSID=LYppQtE1Ucl3FiE7QITvW0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 02:36:20 GMT
+recorded_at: Sat, 11 Aug 2018 15:42:21 GMT
