--- a/www.nass.gov.ng/12a53d17a2982f5a1cb7a2162a18dae218fbb586.yml
+++ b/www.nass.gov.ng/12a53d17a2982f5a1cb7a2162a18dae218fbb586.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 02:46:28 GMT
+    - Sat, 11 Aug 2018 15:55:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=02vqaa5luw13yfScT%2C0lI0; path=/
+    - PHPSESSID=q36B6wjMOzhzPkv-frzqI3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 02:46:28 GMT
+recorded_at: Sat, 11 Aug 2018 15:55:59 GMT
