--- a/www.nass.gov.ng/9efd94bd1785816f79f2dba3b7263839c126a6b4.yml
+++ b/www.nass.gov.ng/9efd94bd1785816f79f2dba3b7263839c126a6b4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 03:20:50 GMT
+    - Sat, 11 Aug 2018 16:28:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=b18SFubAVPLZolR3JVzPN3; path=/
+    - PHPSESSID=kGrur7619FX98e%2CMQ3vNk1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 03:20:50 GMT
+recorded_at: Sat, 11 Aug 2018 16:28:34 GMT
