--- a/www.nass.gov.ng/dd7506a8150779c55761e54ca99439a5deebef07.yml
+++ b/www.nass.gov.ng/dd7506a8150779c55761e54ca99439a5deebef07.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 03:27:11 GMT
+    - Sat, 11 Aug 2018 16:34:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=O%2Crg4yRvUd4VD%2CqZ6A5Cg1; path=/
+    - PHPSESSID=TUF53G5lWzffla88IXNVh0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 03:27:11 GMT
+recorded_at: Sat, 11 Aug 2018 16:34:28 GMT
