--- a/www.nass.gov.ng/7a3abc9e1b140d7739a1e62b8bf330973e02bf7d.yml
+++ b/www.nass.gov.ng/7a3abc9e1b140d7739a1e62b8bf330973e02bf7d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 03:46:59 GMT
+    - Sat, 11 Aug 2018 16:55:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ZDk4GSxO22qbQlerKo21k0; path=/
+    - PHPSESSID=AtXten0NrOn%2CKX903yBHD2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 03:46:59 GMT
+recorded_at: Sat, 11 Aug 2018 16:55:06 GMT
