--- a/www.nass.gov.ng/2f6590bb83aea2411984110e680210cfc9c3a2c2.yml
+++ b/www.nass.gov.ng/2f6590bb83aea2411984110e680210cfc9c3a2c2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 11 Aug 2018 09:03:33 GMT
+    - Sun, 12 Aug 2018 05:17:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=SWePiQryh8fH2cY%2C6SZUx3; path=/
+    - PHPSESSID=b-wsbSgQwiWZ7Ve8T80iJ2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 11 Aug 2018 09:03:33 GMT
+recorded_at: Sun, 12 Aug 2018 05:17:41 GMT
